# C-SoftwareEngineering

./: README.md
sem_01/: str_1.c  str_2.cpp  str_3.cpp
sem_02/c/: build.sh  hello.c  main.c  tv.c  tv.h
sem_02/cpp/: bsm.cpp  bsm.h  build.sh  main.cpp  onefile.cpp  opt_3.s  opt_default.s
sem_03/: main.cpp
sem_04/: estimate_pi_mc.cpp  money.cpp  money_atomic.cpp  money_mutex.cpp  money_race.cpp
sem_05/: compile.sh  hello.c  hello.s  sleep.c
sem_06/: CMakeLists.txt  benchmark.cpp  inet.txt  main.cpp  matmul.cpp  matmul.h  sock_unix_client.c  tests.cpp
sem_06/cmake/: FetchBoostContent.cmake
sem_07/: sock_inet_client.c  sock_inet_client.py  sock_unix_server.c
sem_08/: back.py  front.py  interact.ipynb  monolith.py
